--- a/i/it/itf/itftennis.com.html
+++ b/i/it/itf/itftennis.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the itftennis.com privacy policy that was archived on 2005-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051221074141id_/http%3A//www.itftennis.com/abouttheitf/legal/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the itftennis.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615044201id_/http%3A//www.itftennis.com/abouttheitf/legal/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>ITF Tennis - About the ITF - Privacy Policy</title>
@@ -19,10 +19,7 @@
 <a name="top"></a>
 
 <!-- General ASP/HTML code specific to this weblet -->
-<!-- End specific code -->
-
-
-<table width="760" border="0" cellpadding="0" cellspacing="0" align="center">
+<!-- End specific code --><table width="760" border="0" cellpadding="0" cellspacing="0" align="center">
 <tbody><tr><td colspan="2"><img src="_assets/images/topstrip760.gif" width="760" height="2" alt="" border="0"></td></tr>
 <tr>
 <td width="330" class="blackback"><a href="/" border="0"><img src="/shared/images/frame/ITFBlackBar400x25.gif" width="400" height="25" alt="Return to the ITF homepage" border="0"></a></td>
@@ -39,14 +36,15 @@
 <option value="/mens/">Mens</option>
 <option value="/womens/">Womens</option>
 <option value="/seniors/">Seniors</option>
-<option value="http://www.itfwheelchairtennis.com">Wheelchair</option>
+<option value="/wheelchair/">Wheelchair</option>
 <option value="/coaching/">Coaching</option>
 <option value="/development/">Development</option>
-<option value="/IPIN/">IPIN</option>
+<option value="/ipin/">IPIN</option>
 <option value="/itn/">ITN</option>
 <option value="/olympics/">Olympic Tennis Event</option>
 <option value="/paralympics/">Paralympic Tennis</option>
 <option value="/technical/">Technical</option>
+<option value="/antidoping/">Anti-Doping</option>
 </select>
 <noscript>
 <input type="submit" value="Go">
@@ -57,9 +55,11 @@
 </td>
 </tr>
 </tbody></table>
+
+
 		
 <table width="760" border="0" cellpadding="0" cellspacing="0" align="center">
-<tbody><tr><td><a href=""><img src="_assets/images/TitleBanner.gif" width="760" height="70" border="0" alt="Return to the About the ITF homepage" usemap="#topbanner"></a></td></tr>
+<tbody><tr><td><a href=""><img src="_assets/images/webletheader.gif" width="760" height="70" border="0" alt="Return to the About the ITF homepage" usemap="#topbanner"></a></td></tr>
 </tbody></table>
 
 
@@ -102,54 +102,55 @@ oCMenu.makeMenu('m1404','m1389','Overview','http://www.itftennis.com/abouttheitf
 oCMenu.makeMenu('m1408','m1387','Overview','http://www.itftennis.com/abouttheitf/commercial/index.asp','','100')
 oCMenu.makeMenu('m1424','m1385','Overview','http://www.itftennis.com/abouttheitf/worldwide/index.asp','','180')
 oCMenu.makeMenu('m1410','m1387','Sponsorship','http://www.itftennis.com/abouttheitf/commercial/sponsorship','','100')
-oCMenu.makeMenu('m1481','m1385','Davis Cup by BNP Paribas','http://www.itftennis.com/abouttheitf/worldwide/daviscup.asp','','180')
 oCMenu.makeMenu('m1443','m1343','News Archive','http://www.itftennis.com/abouttheitf/news/archive.asp','','120')
 oCMenu.makeMenu('m1405','m1389','ITF Database','http://www.itftennis.com/abouttheitf/facts/database.asp','','103')
 oCMenu.makeMenu('m1400','m1388','ITF Year','http://www.itftennis.com/abouttheitf/publications/itfyear.asp','','150')
 oCMenu.makeMenu('m1372','m1370','Role of the ITF','http://www.itftennis.com/abouttheitf/abouttheitf/role.asp','','120')
 oCMenu.makeMenu('m1391','m1384','Rules of Tennis','http://www.itftennis.com/abouttheitf/rulesregs/rules.asp','','150')
+oCMenu.makeMenu('m3118','m1385','History of Tennis','http://www.itftennis.com/abouttheitf/worldwide/history.asp','','180')
 oCMenu.makeMenu('m1374','m1370','Structure','http://www.itftennis.com/abouttheitf/abouttheitf/structure','','120')
 oCMenu.makeMenu('m1401','m1388','Davis Cup Yearbook','http://www.itftennis.com/abouttheitf/publications/daviscupyearbook.asp','','150')
+oCMenu.makeMenu('m1379','m1343','This Week ','http://www.itftennis.com/abouttheitf/news/thisweekarchive.asp','','120')
 oCMenu.makeMenu('m1406','m1389','Roll Of Honour','http://www.itftennis.com/abouttheitf/facts/rollofhonour.asp','','103')
 oCMenu.makeMenu('m1394','m1384','Rulebooks','http://www.itftennis.com/abouttheitf/rulesregs/rulebooks.asp','','150')
-oCMenu.makeMenu('m1379','m1343','This Week ','http://www.itftennis.com/abouttheitf/news/thisweekarchive.asp','','120')
-oCMenu.makeMenu('m1482','m1385','Fed Cup','http://www.itftennis.com/abouttheitf/worldwide/fedcup.asp','','180')
+oCMenu.makeMenu('m1481','m1385','Davis Cup by BNP Paribas','http://www.itftennis.com/abouttheitf/worldwide/daviscup.asp','','180')
 oCMenu.makeMenu('m1425','m1387','TV','http://www.itftennis.com/abouttheitf/commercial/tv','','100')
-oCMenu.makeMenu('m1409','m1387','ITF Foundation','http://www.itftennis.com/abouttheitf/commercial/foundation.asp','','100')
-oCMenu.makeMenu('m1483','m1385','Olympic / Paralympic Tennis','http://www.itftennis.com/abouttheitf/worldwide/olympics.asp','','180')
-oCMenu.makeMenu('m1382','m1370','Constitution','http://www.itftennis.com/abouttheitf/abouttheitf/constitution.asp','','120')
+oCMenu.makeMenu('m1482','m1385','Fed Cup by BNP Paribas','http://www.itftennis.com/abouttheitf/worldwide/fedcup.asp','','180')
 oCMenu.makeMenu('m1395','m1384','Technical Role','http://www.itftennis.com/abouttheitf/rulesregs/technical.asp','','150')
+oCMenu.makeMenu('m1409','m1387','ITF Foundation','http://www.itftennis.com/abouttheitf/commercial/foundation.asp','','100')
 oCMenu.makeMenu('m1407','m1389','Results','http://www.itftennis.com/abouttheitf/facts/results.asp','','103')
-oCMenu.makeMenu('m1403','m1388','ITFWorld','http://www.itftennis.com/abouttheitf/publications/itfworld.asp','','150')
 oCMenu.makeMenu('m1381','m1370','History of the ITF','http://www.itftennis.com/abouttheitf/abouttheitf/history.asp','','120')
-oCMenu.makeMenu('m1691','m1385','Grand Slams','http://www.itftennis.com/abouttheitf/worldwide/grandslams','','180')
+oCMenu.makeMenu('m1403','m1388','ITFWorld','http://www.itftennis.com/abouttheitf/publications/itfworld.asp','','150')
+oCMenu.makeMenu('m1382','m1370','Constitution','http://www.itftennis.com/abouttheitf/abouttheitf/constitution.asp','','120')
+oCMenu.makeMenu('m1483','m1385','Olympic / Paralympic Tennis','http://www.itftennis.com/abouttheitf/worldwide/olympics.asp','','180')
 oCMenu.makeMenu('m2639','m1384','Approved Tennis Balls','http://www.itftennis.com/abouttheitf/rulesregs/balllist.asp','','150')
-oCMenu.makeMenu('m2971','m1385','Tennis Masters Cup','http://www.itftennis.com/abouttheitf/worldwide/tmc','','180')
-oCMenu.makeMenu('m2619','m1384','Classified Surfaces','http://www.itftennis.com/abouttheitf/rulesregs/courtlist.asp','','150')
+oCMenu.makeMenu('m1691','m1385','Grand Slams','http://www.itftennis.com/abouttheitf/worldwide/grandslams','','180')
 oCMenu.makeMenu('m1383','m1370','Jobs at the ITF','http://www.itftennis.com/abouttheitf/abouttheitf/jobs.asp','','120')
+oCMenu.makeMenu('m2619','m1384','Classified Surfaces','http://www.itftennis.com/abouttheitf/rulesregs/courtlist.asp','','150')
+oCMenu.makeMenu('m2971','m1385','Tennis Masters Cup','http://www.itftennis.com/abouttheitf/worldwide/tmc','','180')
 oCMenu.makeMenu('m1392','m1384','Anti-Doping','http://www.itftennis.com/abouttheitf/rulesregs/antidoping.asp','','150')
+oCMenu.makeMenu('m1396','m1384','Officiating','http://www.itftennis.com/abouttheitf/rulesregs/officiating.asp','','150')
 oCMenu.makeMenu('m1485','m1385','Hyundai Hopman Cup','http://www.itftennis.com/abouttheitf/worldwide/hopmancup.asp','','180')
 oCMenu.makeMenu('m1470','m1370','Contact Us','http://www.itftennis.com/abouttheitf/abouttheitf/contact.asp','','120')
-oCMenu.makeMenu('m1396','m1384','Officiating','http://www.itftennis.com/abouttheitf/rulesregs/officiating.asp','','150')
 oCMenu.makeMenu('m2093','m1385','Nations Senior Cup','http://www.itftennis.com/abouttheitf/worldwide/seniorcup.asp','','180')
 oCMenu.makeMenu('m1428','m1385','Calendars','http://www.itftennis.com/abouttheitf/worldwide/calendars.asp','','180')
-oCMenu.makeMenu('m1692','m1691','Overview','http://www.itftennis.com/abouttheitf/worldwide/grandslams/index.asp','','130')
-oCMenu.makeMenu('m1411','m1410','Overview','http://www.itftennis.com/abouttheitf/commercial/Sponsorship/index.asp','','150')
 oCMenu.makeMenu('m1426','m1425','Overview','http://www.itftennis.com/abouttheitf/commercial/tv/index.asp','','100')
+oCMenu.makeMenu('m1411','m1410','Overview','http://www.itftennis.com/abouttheitf/commercial/Sponsorship/index.asp','','150')
+oCMenu.makeMenu('m1692','m1691','Overview','http://www.itftennis.com/abouttheitf/worldwide/grandslams/index.asp','','130')
 oCMenu.makeMenu('m1375','m1374','Overview','http://www.itftennis.com/abouttheitf/abouttheitf/structure/index.asp','','160')
 oCMenu.makeMenu('m2972','m2971','News','http://www.itftennis.com/abouttheitf/worldwide/tmc/index.asp','','120')
 oCMenu.makeMenu('m2973','m2971','History','http://www.itftennis.com/abouttheitf/worldwide/tmc/history.asp','','120')
 oCMenu.makeMenu('m1377','m1374','Nat&#39;l Associations & AGM','http://www.itftennis.com/abouttheitf/abouttheitf/structure/nationalassociations.asp','','160')
-oCMenu.makeMenu('m1427','m1425','ITF Archive','http://www.itftennis.com/abouttheitf/commercial/tv/archive.asp','','100')
-oCMenu.makeMenu('m1412','m1410','BNP Paribas','http://www.itftennis.com/abouttheitf/commercial/Sponsorship/bnpparibas.asp','','150')
 oCMenu.makeMenu('m1696','m1691','Australian Open','http://www.itftennis.com/abouttheitf/worldwide/grandslams/ausopen.asp','','130')
-oCMenu.makeMenu('m1695','m1691','Roland Garros','http://www.itftennis.com/abouttheitf/worldwide/grandslams/rolandgarros.asp','','130')
+oCMenu.makeMenu('m1412','m1410','BNP Paribas','http://www.itftennis.com/abouttheitf/commercial/Sponsorship/bnpparibas.asp','','150')
+oCMenu.makeMenu('m1427','m1425','ITF Archive','http://www.itftennis.com/abouttheitf/commercial/tv/archive.asp','','100')
 oCMenu.makeMenu('m1413','m1410','Adecco','http://www.itftennis.com/abouttheitf/commercial/Sponsorship/adecco.asp','','150')
+oCMenu.makeMenu('m1695','m1691','Roland Garros','http://www.itftennis.com/abouttheitf/worldwide/grandslams/rolandgarros.asp','','130')
 oCMenu.makeMenu('m1376','m1374','Board of Directors','http://www.itftennis.com/abouttheitf/abouttheitf/structure/board.asp','','160')
 oCMenu.makeMenu('m2977','m2971','Roll of Honour','http://www.itftennis.com/abouttheitf/worldwide/tmc/rollhonour.asp','','120')
 oCMenu.makeMenu('m1378','m1374','Executive Officers','http://www.itftennis.com/abouttheitf/abouttheitf/structure/executive.asp','','160')
-oCMenu.makeMenu('m1421','m1410','Camozzi','http://www.itftennis.com/abouttheitf/commercial/Sponsorship/camozzi.asp','','150')
 oCMenu.makeMenu('m1693','m1691','Wimbledon','http://www.itftennis.com/abouttheitf/worldwide/grandslams/wimbledon.asp','','130')
+oCMenu.makeMenu('m1421','m1410','Camozzi','http://www.itftennis.com/abouttheitf/commercial/Sponsorship/camozzi.asp','','150')
 oCMenu.makeMenu('m1694','m1691','US Open','http://www.itftennis.com/abouttheitf/worldwide/grandslams/usopen.asp','','130')
 oCMenu.makeMenu('m1477','m1410','Fossil','http://www.itftennis.com/abouttheitf/commercial/sponsorship/fossil.asp','','150')
 oCMenu.makeMenu('m1380','m1374','Committees & Commissions','http://www.itftennis.com/abouttheitf/abouttheitf/structure/committees.asp','','160')
@@ -325,6 +326,12 @@ A cookie is a piece of information that is stored on your computer's hard drive 
 </td></tr> 
 </tbody></table>
 
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-337765-1";
+urchinTracker();
+</script>
 
 
 </body></html>
