--- a/i/in/int/interworx.com.html
+++ b/i/in/int/interworx.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the interworx.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230094128id_/http%3A//www.interworx.com/legal/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the interworx.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615044432id_/http%3A//interworx.com/legal/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
   <title>Our Privacy Policy | InterWorx Cluster Panel</title>
