--- a/g/go/gol/gold-software.com.html
+++ b/g/go/gol/gold-software.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gold-software.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212113439id_/http%3A//www.gold-software.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gold-software.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615044514id_/http%3A//gold-software.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head><title>Privacy policy</title>
 <meta content="text/html; charset=windows-1251" http-equiv="Content-Type">
