--- a/s/sh/sha/shareholder.com.html
+++ b/s/sh/sha/shareholder.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the shareholder.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228105457id_/http%3A//shareholder.com/home/Company/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shareholder.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615044836id_/http%3A//www.shareholder.com/home/Company/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
   <title>Shareholder.com :: Company :: Privacy Statement ::</title>
   <meta name="description" content="Shareholder.com has 11 years of experience facilitating communications and increasing transparency among listed companies, their shareholders and the investment community. The company has a comprehensive suite of corporate governance solutions and investor relations (IR) services that help its clients raise shareholder value and optimize their IR strategies.">
 	<meta name="keywords" content="Shareholder.com,privacy statement">
-  <meta name="copyright" content="2005© Copyright Shareholder.com 2005. All rights reserved.">
+  <meta name="copyright" content="2006© Copyright Shareholder.com 2006. All rights reserved.">
   <meta http-equiv="expires" content="0">
   <meta http-equiv="Pragma" content="no-cache">
   <link href="/home/includes/styles.css" rel="stylesheet" type="text/css">
@@ -156,7 +156,7 @@ Maynard, MA 01754<br>U.S.A.
   	<td colspan="2" align="left" background="/home/images/footerBottomBackground.jpg" height="25" class="whiteFontxsmall">&nbsp;&nbsp;<a class="whiteFontxsmall" href="/home/Company/">About Shareholder.com</a> | <a class="whiteFontxsmall" href="/home/Contact/">Contact Us</a> | <a class="whiteFontxsmall" href="/home/Company/privacy.cfm">Privacy Statement</a> | <a class="whiteFontxsmall" href="/home/Company/sitemap.cfm">Sitemap</a></td>
   </tr>
 </tbody></table>
-<span class="lightGreyFontxsmall">© Copyright Shareholder.com 2005. All rights reserved.</span>
+<span class="lightGreyFontxsmall">© Copyright Shareholder.com 2006. All rights reserved.</span>
 
   <script language="JavaScript">
   //Menu object creation
