--- a/i/ip/ipa/ipaddressguide.com.html
+++ b/i/ip/ipa/ipaddressguide.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ipaddressguide.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218203455id_/http%3A//www.ipaddressguide.com/privacypolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ipaddressguide.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615044943id_/http%3A//ipaddressguide.com/privacypolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>Privacy Policy</title>
