--- a/n/ne/net/netline.com.html
+++ b/n/ne/net/netline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the netline.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213204131id_/http%3A//www.netline.com/About/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netline.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615045436id_/http%3A//netline.com/About/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>NetLine Corporation - About NetLine - Privacy Policy</title>
@@ -308,7 +308,7 @@ E: <a href="mailto:privacy@netline.com" class="body">privacy@netline.com</a>
   </tr>
   <tr>
     <td align="center"><img src="/Images/dots_spacer.gif" width="736" height="10"><br>
-      <span class="bottomnav">©NetLine Corporation 2005&nbsp; | &nbsp;<a href="http://www.netline.com" class="bottomnav">Home</a>&nbsp; | &nbsp;<a href="/About/privacy.html" class="bottomnav">Privacy 
+      <span class="bottomnav">©NetLine Corporation 2006&nbsp; | &nbsp;<a href="http://www.netline.com" class="bottomnav">Home</a>&nbsp; | &nbsp;<a href="/About/privacy.html" class="bottomnav">Privacy 
       Policy</a>&nbsp; | &nbsp;<a href="/Contact/" class="bottomnav">Contact Us</a> </span></td>
   </tr>
 </tbody></table>
